# maggie_devices

./: AUTHORS.md  README.md
base/: AUTHORS.md  CMakeLists.txt  README.md  package.xml
base/launch/: base.launch
base/src/: CMakeLists.txt  base_motor_node.cpp  base_motor_node.h  base_motor_node_main.cpp  maggie_data.h
base/src/test/: test_manual_base_motors.cpp
eyelids/: AUTHORS.md  CMakeLists.txt  README.md  package.xml
eyelids/launch/: eyelids.launch
eyelids/src/: CMakeLists.txt  eyelids_node.h  eyelids_node_main.cpp
eyelids/src/test/: gtest_eyelids_node.cpp
ir_controller/: AUTHORS.md  CMakeLists.txt  README.md  package.xml
ir_controller/scripts/: rosdep.sh
ir_controller/src/: CMakeLists.txt  ir_controller_node.cpp  ir_controller_node_main.cpp
ir_controller/src/test/: gtest_ir_controller_node.cpp  test_manual_ir_controller.cpp
ir_controller/test/: ir_controller_node.test
labjack/: AUTHORS.md  CMakeLists.txt  README.md  package.xml
labjack/launch/: labjack.launch
labjack/scripts/: rosdep.sh
labjack/src/: labjack_node.cpp  labjack_node_main.cpp
labjack/src/test/: CMakeLists.txt  gtest_labjack_node.cpp  test_manual_labjack_primitives.cpp
maggie_base/: AUTHORS.md  CMakeLists.txt  README.md  package.xml
maggie_base/launch/: base.launch
maggie_base/src/: base_motor_driver.cpp  base_motor_driver.h  base_motor_node.cpp  base_motor_node.h
maggie_base/src/test/: CMakeLists.txt  test_manual_base_motors.cpp
maggie_devices/: AUTHORS.md  CMakeLists.txt  README.md  package.xml
maggie_eyelids/: AUTHORS.md  CMakeLists.txt  README.md  package.xml
maggie_eyelids/launch/: eyelids.launch
maggie_eyelids/src/: eyelids_data.h  eyelids_node.cpp  eyelids_node.h  eyelids_node_main.cpp
maggie_eyelids/src/test/: CMakeLists.txt  gtest_eyelids_node.cpp
maggie_eyelids/test/: eyelids_node.test
maggie_ir_controller/: AUTHORS.md  CMakeLists.txt  README.md  package.xml
maggie_ir_controller/launch/: ir_controller.launch  ir_controller.launch~
maggie_ir_controller/src/: CMakeLists.txt  ir_controller_node.cpp  ir_controller_node.h  ir_controller_node_main.cpp
maggie_ir_controller/src/test/: CMakeLists.txt  gtest_ir_controller_node.cpp  test_manual_ir_controller.cpp
maggie_labjack/: AUTHORS.md  CMakeLists.txt  README.md  package.xml
maggie_labjack/launch/: labjack.launch
maggie_labjack/src/: CMakeLists.txt  labjack_data.h  labjack_node.cpp  labjack_node.h
maggie_labjack/src/test/: gtest_labjack_node.cpp  test_manual_labjack_primitives.cpp
maggie_labjack/test/: labjack_node.test
maggie_motor_controller/: AUTHORS.md  CMakeLists.txt  README.md  package.xml
maggie_motor_controller/launch/: arms_controller.launch  neck_controller.launch
maggie_motor_controller/src/: motor_controller_data.h  motor_controller_node.cpp  motor_controller_node.h  motor_controller_node_main.cpp
maggie_motor_controller/src/test/: CMakeLists.txt  gtest_motor_controller_node.cpp
maggie_rfid/: AUTHORS.md  CMakeLists.txt  README.md  package.xml
maggie_rfid/launch/: rfid_base.launch  rfid_head.launch  rfid_head.launch~
maggie_rfid/src/: CMakeLists.txt  rfid_node.cpp  rfid_node.h  rfid_node_main.cpp
motor_controller/: AUTHORS.md  CMakeLists.txt  README.md  package.xml
motor_controller/launch/: arms_controller.launch  neck_controller.launch
motor_controller/src/: CMakeLists.txt  motor_controller_node.cpp  motor_controller_node.h  motor_controller_node_main.cpp
rfid/: AUTHORS.md  CMakeLists.txt  README.md  package.xml
rfid/launch/: rfid_base.launch
rfid/scripts/: rosdep.sh
rfid/src/: CMakeLists.txt  rfid_node.cpp  rfid_node.h  rfid_node_main.cpp
rfid/src/test/: CMakeLists.txt
